<resources>
    <string name="app_name">Curs Android Fundamentals</string>
    <string name="hello_world_from_android">Hello World from Android!</string>
    <string name="this_is_my_first_textview">This is my first TextView</string>
    <string name="i_am_a_button">I am a button</string>
    <string name="write_your_name_here">Write your name here</string>
    <string name="i_accept_terms_and_conditions">I accept Terms and Conditions</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="change_color">change color</string>
    <string name="search_for_android">Search for androids</string>
    <string name="please_add_your_name_here">Please add your name here</string>
    <string name="greetings">Greetings :)</string>
    <string name="error_insert_name">Please insert a name</string>
    <string name="this_is_an_orange_textview">This is an orange TextView</string>
    <string name="todo">TODO</string>
    <string name="this_is_a_green_button">This is a green button!</string>
    <string name="this_is_a_button">This is a button</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="this_is_a_new_edittext">This is a new EditText</string>
    <string name="notify_me">Notify me</string>
    <string name="auto_backup">Auto backup</string>
    <string name="this_is_a_blue_textview">This is a blue TextView</string>
    <string name="this_is_a_green_textview">This is a green TextView</string>
</resources>