<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange_color"
            android:gravity="center"
            android:padding="22dp"
            android:text="@string/this_is_an_orange_textview"
            android:textSize="@dimen/medium_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green_color"
            android:gravity="center"
            android:text="@string/this_is_a_green_textview"
            android:textSize="@dimen/medium_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_color"
            android:gravity="center"
            android:text="@string/this_is_a_blue_textview"
            android:textSize="@dimen/medium_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/this_is_a_button" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/android_logo" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/green_color"
            android:text="@string/this_is_a_green_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_color"
        android:orientation="vertical"
        android:paddingBottom="@dimen/medium_text">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Autofill"
            android:hint="@string/this_is_an_edittext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Autofill"
            android:hint="@string/this_is_a_new_edittext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="9dp"
                android:layout_weight="1"
                android:text="@string/notify_me" />

            <Switch
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/auto_backup"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="@color/red"
            android:rating="4"
            android:stepSize="0.5" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>